Put body tag onto the GPU. Prevented side scrolling from arrow clicks. Fixed whitespace from previous commit.

--- a/slidekit.css
+++ b/slidekit.css
@@ -1,9 +1,9 @@
 /*  SlideKit styles
     Andrew Hedges, andrew@hedges.name
     @created 2010-04-14 16:46
-		
-		Jayson J. Phillips, jayson.phillips@chroniumlabs.com
-		@contribution Scale Inward Transition Style
+
+    Jayson J. Phillips, jayson.phillips@chroniumlabs.com
+    @contribution Scale Inward Transition Style
     @updated 2011-08-06 16:31
 
     Copyright (c) 2010 Andrew Hedges, http://github.com/segdeha/SlideKit
@@ -159,6 +159,7 @@ body {
     position: absolute;
     right: 20px;
     top: 20px;
+    -webkit-transform: translate3d(0,0,0);
 }
 article {
     display: table-cell;
